# llm_jepa_v2

./: .dockerignore  .env.sample  .gitignore  Dockerfile.cpu  Dockerfile.gpu  README.md  config.py  config_optuna.py  config_paired_tgt_ctx.py  config_self_sup_baseline.py  count_dataset.py  environment.yml  eval_patch_size_2.pbs  eval_suite_main.py  evals.pbs  evaluate_glue_jepa.pbs  evaluate_glue_longformer.pbs  evaluate_llm_jepa.pbs  evaluate_longformer.pbs  evaluate_lots_llm_jepa.pbs  glue_main.py  imdb_evaluate.py  pipeline.json  pipeline.py  pyproject.toml  requirements.txt  requirements_old.txt  requirements_on_gadi.txt  run_glue_eval.py  run_longbench_eval.py  run_train_two_a100.pbs  train.py  train_accelerate.py  train_jepa.pbs  train_jepa_optuna.pbs  train_longformer.pbs  train_longformer.py  train_longformer_simple.py  train_optuna.py  train_paired_tgt_ctx.pbs  (+3 more)
eval/: config.py
eval/model_wrappers/: jepa_wrapper.py  longformer_wrapper.py
eval/probes/: linear_probe.py
eval/tasks/: glue_dataset.py  longbench_dataset.py  longbench_metrics.py
evaluate/: readme.md
random_scripts/: download_longbench_v2.pbs  download_longbench_v2.py
scripts/: download_nl_rx_synth.py
src/builders/: base_builder.py  dataloader_builder.py  encoder_builder.py  loss_calculator_builder.py  masker_builder.py  paired_dataloader_builder.py  patcher_builder.py  predictor_builder.py
src/dataloaders/: base.py  dolma_sample_dataloader.py  nl_rx_synth_dataloader.py  nl_rx_synth_flat_dataloader.py  recipe1m_dataloader.py
src/encoders/: base.py
tests/: README.md
(+32 files in other folders)
