[tool.poetry]
name = "llm-jepa-v2"
version = "0.1.0"
description = ""
authors = ["Charlie <charlie.wyatt0@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.7.1"
torchvision = "^0.22.1"
python-dotenv = "^1.1.0"
pydantic = "^2.11.7"
transformers = "^4.53.0"
datasets = "^3.6.0"
kfp = "^2.14.2"
google-cloud-aiplatform = "^1.107.0"
gcsfs = "2025.3.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
